syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.davincischools.leo.protos.interest_service";

package interest_service;

service InterestService {
  rpc RegisterInterest (RegisterInterestRequest) returns (RegisterInterestResponse) {}
}

message RegisterInterestRequest {
  optional string first_name = 1;
  optional string last_name = 2;
  optional string email_address = 3;
  optional string profession = 5;
  optional string reason_for_interest = 6;
  optional string district_name = 7;
  optional string school_name = 8;
  optional string address_line_1 = 9;
  optional string address_line_2 = 10;
  optional string city = 11;
  optional string state = 12;
  optional string zip_code = 13;
  optional int32 num_teachers = 14;
  optional int32 num_students = 15;
}

message RegisterInterestResponse {
  optional int32 id = 1;
}
